PROTON-215: Added ruby interop test.
Added a ruby version of the interop test.
- Added convenience classes to Data to handle array, map, described and null.
- Added a Type object to describe Data types.

All tests (python, java, ruby) are passing.
- Disabled failing test in message_spec.rb, see PROTON-272

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1456613 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,9 +101,9 @@ install (FILES LICENSE README TODO
 
 # add relevant CTest support
 find_program (MAVEN_EXECUTABLE mvn DOC "Location of the maven program")
-if (JAVA_FOUND AND MAVEN_EXECUTABLE AND DEFINED ENV{M2_HOME})
+if (JAVA_FOUND AND MAVEN_EXECUTABLE)
   add_test (proton-jni mvn test -P proton-jni --file ${CMAKE_CURRENT_SOURCE_DIR}/pom.xml) 
   set_tests_properties(proton-jni PROPERTIES PASS_REGULAR_EXPRESSION "Tests run:.*Failures: 0, Errors: 0")
-else (JAVA_FOUND AND MAVEN_EXECUTABLE AND DEFINED ENV{M2_HOME})
+else (JAVA_FOUND AND MAVEN_EXECUTABLE)
   message (STATUS "Cannot find both Java and Maven: testing disabled for Proton-J and JNI Bindings")
-endif (JAVA_FOUND AND MAVEN_EXECUTABLE AND DEFINED ENV{M2_HOME})
+endif (JAVA_FOUND AND MAVEN_EXECUTABLE)
