PROTON-254: Resolve C++ compliation issues of the swig generated code for the Java binding
* Use Swig's JCALL macros to invoke JNI functions in order that code compiles under C or C++
* Bracket JNIEXPORTed functions in ifdef'd extern "C" {...} in order to preserve symbol name (which is critical to JNI)
* Add casting to resolve compile issues under C++

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1458567 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/java/CMakeLists.txt
+++ b/proton-c/bindings/java/CMakeLists.txt
@@ -22,6 +22,10 @@ SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR}/src/main/java/org/apache/qpid/
 
 message(STATUS "Using JNI libraries: ${JNI_LIBRARIES}" )
 
+if (BUILD_WITH_CXX)
+    SET_SOURCE_FILES_PROPERTIES(java.i PROPERTIES CPLUSPLUS ON)
+endif (BUILD_WITH_CXX)
+
 swig_add_module(proton-swig java java.i)
 include_directories(${JNI_INCLUDE_DIRS})
 swig_link_libraries(proton-swig ${BINDING_DEPS}  )
@@ -30,6 +34,7 @@ set_target_properties(proton-swig
     PROPERTIES
     OUTPUT_NAME "proton-jni"
     PREFIX "${CMAKE_SHARED_LIBRARY_PREFIX}")
+
 
 add_custom_command(OUTPUT ${CMAKE_SWIG_OUTDIR}
                    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_SWIG_OUTDIR}
