PROTON-276: JythonTest now uses system property to locate python testscript and test-root.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1460177 13f79535-47bb-0310-9956-ffa450edef68

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -42,8 +42,6 @@ To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-bui
     <!-- System tests are arranged by language, hence the non-default location of the JUnit tests. -->
     <testSourceDirectory>java</testSourceDirectory>
     <resources>
-      <resource><directory>python</directory></resource>
-      <resource><directory>interop</directory></resource>
       <resource><directory>resources</directory></resource>
     </resources>
     <plugins>
@@ -52,7 +50,9 @@ To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-bui
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <systemPropertyVariables>
-            <protonJythonTestsXmlOutputDirectory>${testReportOutputDirectory}</protonJythonTestsXmlOutputDirectory>
+            <protonJythonTestRoot>${basedir}/python</protonJythonTestRoot>
+            <protonJythonTestScript>${basedir}/python/proton-test</protonJythonTestScript>
+            <protonJythonTestXmlOutputDirectory>${testReportOutputDirectory}</protonJythonTestXmlOutputDirectory>
             <java.util.logging.config.file>${build.outputDirectory}/logging.properties</java.util.logging.config.file>
           </systemPropertyVariables>
          <reportsDirectory>${testReportOutputDirectory}</reportsDirectory>
