NO-JIRA: Resolve deprecation warning from Maven regarding use of build.outputDirectory property
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1460192 13f79535-47bb-0310-9956-ffa450edef68

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -53,7 +53,7 @@ To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-bui
             <protonJythonTestRoot>${basedir}/python</protonJythonTestRoot>
             <protonJythonTestScript>${basedir}/python/proton-test</protonJythonTestScript>
             <protonJythonTestXmlOutputDirectory>${testReportOutputDirectory}</protonJythonTestXmlOutputDirectory>
-            <java.util.logging.config.file>${build.outputDirectory}/logging.properties</java.util.logging.config.file>
+            <java.util.logging.config.file>${project.build.outputDirectory}/logging.properties</java.util.logging.config.file>
           </systemPropertyVariables>
          <reportsDirectory>${testReportOutputDirectory}</reportsDirectory>
         </configuration>
