moved messenger source code into messenger subdirectory
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1460242 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -241,7 +241,7 @@ set (qpid-proton-core
   src/message/message.c
   src/sasl/sasl.c
 
-  src/messenger.c
+  src/messenger/messenger.c
 
   ${CMAKE_CURRENT_BINARY_DIR}/encodings.h
   ${CMAKE_CURRENT_BINARY_DIR}/protocol.h
