PROTON-223: add messenger-based soak and valgrind tests
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1462216 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ message(STATUS "PN_VERSION: ${PN_VERSION}")
 enable_testing()
 include (CTest)
 set (pn_test_root "${CMAKE_CURRENT_SOURCE_DIR}/tests")
-
+set (pn_test_bin "${CMAKE_CURRENT_BINARY_DIR}/tests")
 
 # In rpm builds the build sets some variables:
 #  CMAKE_INSTALL_PREFIX - this is a standard cmake variable
