PROTON-279: add test failure regular expression check
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1462234 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -380,6 +380,7 @@ endif (CMAKE_SYSTEM_NAME STREQUAL Windows)
 add_test (python-test python ${env_py}
          "PATH=${py_path}" "PYTHONPATH=${py_pythonpath}" ${VALGRIND_ENV}
          ${PYTHON_EXECUTABLE} "${py_root}/proton-test")
+set_tests_properties(python-test PROPERTIES PASS_REGULAR_EXPRESSION "Totals: .* 0 failed")
 
 find_program(ruby_exe "ruby")
 if (ruby_exe)
