PROTON-280: Added Engine documentation and configured Maven to generate HTML from it and from existing Messenger docs. Moved existing docs down one level because Maven's doxia markdown plugin requires that markdown docs are in a markdown sub-folder.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1463950 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-j/contrib/proton-hawtdispatch/pom.xml
+++ b/proton-j/contrib/proton-hawtdispatch/pom.xml
@@ -25,6 +25,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>proton-hawtdispatch</artifactId>
+  <name>proton-hawtdispatch</name>
 
   <properties>
     <hawtbuf-version>1.9</hawtbuf-version>
@@ -53,5 +54,8 @@
 
   <build> 
   </build>
+  <scm>
+    <url>http://svn.apache.org/viewvc/qpid/proton/</url>
+  </scm>
 
 </project>
