--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <description>Proton is a library for speaking AMQP.</description>
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
@@ -32,19 +33,44 @@
     <junit-version>4.10</junit-version>
   </properties>
 
+  <distributionManagement>
+    <site>
+      <id>proton-site-id</id>
+      <!-- Maven requires a site url even if you only run site:stage -->
+      <url>file:///tmp/proton-site</url>
+    </site>
+  </distributionManagement>
+
   <build>
     <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <configuration>
-        <source>1.6</source>
-        <target>1.6</target>
-        <optimize>true</optimize>
-        <showDeprecation>true</showDeprecation>
-        <showWarnings>true</showWarnings>
-      </configuration>
-    </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          <optimize>true</optimize>
+          <showDeprecation>true</showDeprecation>
+          <showWarnings>true</showWarnings>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.doxia</groupId>
+            <artifactId>doxia-module-markdown</artifactId>
+            <version>1.3</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <inputEncoding>UTF-8</inputEncoding>
+          <outputEncoding>UTF-8</outputEncoding>
+          <siteDirectory>docs</siteDirectory>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -68,4 +94,14 @@
     </profile>
   </profiles>
 
+  <url>http://qpid.apache.org/proton</url>
+  <scm>
+    <url>http://svn.apache.org/viewvc/qpid/proton/</url>
+  </scm>
+  <issueManagement>
+    <url>https://issues.apache.org/jira/browse/PROTON</url>
+  </issueManagement>
+  <ciManagement>
+    <url>https://builds.apache.org/view/M-R/view/Qpid/job/Qpid-proton-j/</url>
+  </ciManagement>
 </project>
