--- a/proton-j/proton/pom.xml
+++ b/proton-j/proton/pom.xml
@@ -24,6 +24,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>proton-j-impl</artifactId>
+  <name>proton-j-impl</name>
 
   <dependencies>
     <dependency>
@@ -46,4 +47,7 @@
     </dependency>
   </dependencies>
 
+  <scm>
+    <url>http://svn.apache.org/viewvc/qpid/proton/</url>
+  </scm>
 </project>
