--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -22,6 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>tests</artifactId>
+  <name>tests</name>
 
   <description>The Proton system tests execute against either the Java or the C implementations, based on the chosen profile.
 
@@ -137,4 +138,7 @@ To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-bui
     <artifactId>proton-project</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+  <scm>
+    <url>http://svn.apache.org/viewvc/qpid/proton/</url>
+  </scm>
 </project>
