PROTON-284: Added first version of ConnectionTest and TransportTest which contain AMQP spec-driven JUnit tests. We think the set of test methods is nearly complete. However, only a few have been implemented. Only these ones have the @Test annotation. Enhanced Proton Factory classes to allow the proton-c or proton-j implementation to be requested. Also added JavaDoc in various places to highlight issues that the tests have revealed.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1464428 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,8 @@
       <id>proton-jni</id>
       <modules>
         <module>proton-j/proton-api</module>
+        <!--proton-j-impl is required so we can use its EncoderImpl and DecoderImpl to generate test data -->
+        <module>proton-j/proton</module>
         <module>tests</module>
       </modules>
     </profile>
