PROTON-160: make ~ routes work with send
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1466547 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -243,6 +243,7 @@ set (qpid-proton-core
   src/sasl/sasl.c
 
   src/messenger/messenger.c
+  src/messenger/store.c
 
   ${CMAKE_CURRENT_BINARY_DIR}/encodings.h
   ${CMAKE_CURRENT_BINARY_DIR}/protocol.h
