PROTON-299: added address rewrite API to control what goes into the to field on the wire, added default rewrite rules to remove credentials from URLs
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1481834 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -246,6 +246,7 @@ set (qpid-proton-core
 
   src/messenger/messenger.c
   src/messenger/store.c
+  src/messenger/transform.c
 
   ${CMAKE_CURRENT_BINARY_DIR}/encodings.h
   ${CMAKE_CURRENT_BINARY_DIR}/protocol.h
