PROTON-225: added new methods for Transport input and output which return ByteBuffers owned by Transport. In contrast, the old deprecated input/output methods used byte arrays owned by the CLIENT. Summary of changes: - added new Transport methods: getInputBuffer, processInput, getOutputBuffer and outputProcessed - the old Transport input/output methods are now deprecated - the Python-to-proton-j binding now uses the new methods (note that the Python-to-proton-c binding still uses the old functions) - added new methods to JNITransport. Implemented by calling the existing input/output methods for now. - "tests" module now depends on proton-j-impl so it can use its encoder, decoder and test classes. - improve exception handling in messenger.py - consolidated all Python test pump functions - increased ssl python test coverage to test ssl connection when client is allowed to connect unsecurely - added configuration options to JythonTest allowing repeated test invocation and colorized output to be switched on.
Work done by Keith Wall <kwall@apache.org> and me.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1484842 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-j/proton/pom.xml
+++ b/proton-j/proton/pom.xml
@@ -26,6 +26,26 @@
   <artifactId>proton-j-impl</artifactId>
   <name>proton-j-impl</name>
 
+  <!-- Creates a JAR containing the test classes of this module.  These are used by the tests module. -->
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <!-- Binding to phase test to retains compatibility with Maven 2. If we ever remove
+                 support for Maven 2, the phase can revert to its default (package). -->
+            <phase>test</phase>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.qpid</groupId>
