NO-JIRA: added pom comments
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1489373 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
 
   <groupId>org.apache.qpid</groupId>
   <artifactId>proton-project</artifactId>
+  <!-- We use a static 1.0-SNAPSHOT version so that dependent projects
+       requiring the latest trunk build can use an unchanging value in their pom.xml.
+       We will use a more representative version if and when snapshots from multiple
+       branches are being concurrently produced. -->
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
