fail regular expression for ruby unit tests
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1494236 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -404,6 +404,7 @@ if (ruby_exe)
   # ruby unit tests:  tests/ruby/proton-test
   add_test (ruby-unit-test python ${env_py} "PATH=${rb_path}" "RUBYLIB=${rb_rubylib}"
     "${rb_root}/proton-test")
+  set_tests_properties(ruby-unit-test PROPERTIES FAIL_REGULAR_EXPRESSION "Error;Failure")
 
   # ruby spec tests
   find_program(rspec_exe rspec)
